-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: None
-
Component/s: hotspot
-
b26
We are seeing crashes in our testing e.g.
---------------- stdout ----------------
395707:
Recording 1: name=1 maxsize=250.0MB (running)
---------------- stderr ----------------
----------------------------------------
Running DCMD 'JFR.dump name=1 filename=/opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S510094/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0903ae8c-555d-48e5-9519-d9b194855f3b/runs/8cbf227a-e181-4f3b-bcd0-a0d27d44f9d9/testoutput/test-support/jtreg_open_test_jdk_tier1_part3/scratch/1/TestJcmdStartStopDefault.jfr' through 'PidJcmdExecutor'
Executing command '[/opt/mach5/mesos/work_dir/jib-master/install/jdk-25+26-3335/linux-x64.jdk/jdk-25/bin/jcmd, -J-Djdk.attach.allowStreamingOutput=false, 395707, JFR.dump name=1 filename=/opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S510094/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0903ae8c-555d-48e5-9519-d9b194855f3b/runs/8cbf227a-e181-4f3b-bcd0-a0d27d44f9d9/testoutput/test-support/jtreg_open_test_jdk_tier1_part3/scratch/1/TestJcmdStartStopDefault.jfr]'
[2025-06-04T22:47:49.638047890Z] Gathering output for process 395913
[2025-06-04T22:47:49.663241398Z] Waiting for completion for process 395913
----------System.err:(1/41)----------
free(): double free detected in tcache 2
---------------- stdout ----------------
395707:
Recording 1: name=1 maxsize=250.0MB (running)
---------------- stderr ----------------
----------------------------------------
Running DCMD 'JFR.dump name=1 filename=/opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S510094/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0903ae8c-555d-48e5-9519-d9b194855f3b/runs/8cbf227a-e181-4f3b-bcd0-a0d27d44f9d9/testoutput/test-support/jtreg_open_test_jdk_tier1_part3/scratch/1/TestJcmdStartStopDefault.jfr' through 'PidJcmdExecutor'
Executing command '[/opt/mach5/mesos/work_dir/jib-master/install/jdk-25+26-3335/linux-x64.jdk/jdk-25/bin/jcmd, -J-Djdk.attach.allowStreamingOutput=false, 395707, JFR.dump name=1 filename=/opt/mach5/mesos/work_dir/slaves/d2398cde-9325-49c3-b030-8961a4f0a253-S510094/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/0903ae8c-555d-48e5-9519-d9b194855f3b/runs/8cbf227a-e181-4f3b-bcd0-a0d27d44f9d9/testoutput/test-support/jtreg_open_test_jdk_tier1_part3/scratch/1/TestJcmdStartStopDefault.jfr]'
[2025-06-04T22:47:49.638047890Z] Gathering output for process 395913
[2025-06-04T22:47:49.663241398Z] Waiting for completion for process 395913
----------System.err:(1/41)----------
free(): double free detected in tcache 2
- relates to
-
JDK-8358666 [REDO] Implement JEP 509: JFR CPU-Time Profiling
-
- Resolved
-
-
JDK-8342818 Implement JEP 509: JFR CPU-Time Profiling
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/9186cc73
-
Review(master)
openjdk/jdk/25649