8358628: [BACKOUT] 8342818: Implement JEP 509: JFR CPU-Time Profiling

Reviewed-by: pchilanomate, dholmes