src/hotspot/share/jfr/jfr.inline.hpp
@@ -32,8 +32,7 @@
 
 inline bool Jfr::has_sample_request(JavaThread* jt) {
   assert(jt != nullptr, "invariant");
-  JfrThreadLocal* tl = jt->jfr_thread_local();
-  return tl->has_sample_request() || tl->has_cpu_time_jfr_requests();
+  return jt->jfr_thread_local()->has_sample_request();
 }
 
 inline void Jfr::check_and_process_sample_request(JavaThread* jt) {
