src/hotspot/share/utilities/ticks.hpp
@@ -236,7 +236,6 @@ class TimeInstant : public Rep<TimeSource> {
   friend class TimePartitionsTest;
   friend class GCTimerTest;
   friend class CompilerEvent;
-  friend class JfrCPUSamplerThread;
 };
 
 #if INCLUDE_JFR
